<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_25_dp"
        android:background="#A6e2f1fb">

        <RelativeLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10_dp">

                <TextView
                    android:id="@+id/input_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_23_sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/checkbox_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_tag"
                    android:layout_marginTop="20dp">

                    <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:checked="false"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag1" />

                    <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox1"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag2" />

                    <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox2"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag3" />

                    <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox3"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag4" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/checkbox_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout1">

                    <CheckBox
                        android:id="@+id/checkbox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag5" />

                    <CheckBox
                        android:id="@+id/checkbox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox5"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag6" />

                    <CheckBox
                        android:id="@+id/checkbox7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox6"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag7" />

                    <CheckBox
                        android:id="@+id/checkbox8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox7"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag8" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/checkbox_layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout2">


                    <CheckBox
                        android:id="@+id/checkbox9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag9" />

                    <CheckBox
                        android:id="@+id/checkbox10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox9"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag10" />

                    <CheckBox
                        android:id="@+id/checkbox11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox10"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag11" />

                    <CheckBox
                        android:id="@+id/checkbox12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox11"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag12" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/checkbox_layout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout3">

                    <CheckBox
                        android:id="@+id/checkbox13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag13" />

                    <CheckBox
                        android:id="@+id/checkbox14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox13"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag14" />


                    <CheckBox
                        android:id="@+id/checkbox15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox14"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag15" />


                    <CheckBox
                        android:id="@+id/checkbox16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox15"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag16" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/checkbox_layout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout4">

                    <CheckBox
                        android:id="@+id/checkbox17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag17" />

                    <CheckBox
                        android:id="@+id/checkbox18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox17"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag18" />

                    <CheckBox
                        android:id="@+id/checkbox19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox18"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag19" />

                    <CheckBox
                        android:id="@+id/checkbox20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox19"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag20" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/checkbox_layout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout5">

                    <CheckBox
                        android:id="@+id/checkbox21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag21" />

                    <CheckBox
                        android:id="@+id/checkbox22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox21"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag22" />

                    <CheckBox
                        android:id="@+id/checkbox23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox22"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag23" />

                    <CheckBox
                        android:id="@+id/checkbox24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox23"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag24" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/checkbox_layout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/checkbox_layout6">

                    <CheckBox
                        android:id="@+id/checkbox25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag25" />

                    <CheckBox
                        android:id="@+id/checkbox26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox25"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag26" />

                    <CheckBox
                        android:id="@+id/checkbox27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox26"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag27" />

                    <CheckBox
                        android:id="@+id/checkbox28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/checkbox27"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/tag28" />
                </RelativeLayout>


            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout5"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button2"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_15_sp" />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>