<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Porong"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:hint="@string/signup_hint1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dp"
            android:inputType = "textPassword"
            android:hint="@string/password" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_login"
            android:layout_width="@dimen/dimen_200_dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button2"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="@string/notyet"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="@dimen/dimen_150_dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:background="@drawable/button2"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimen_20_sp"
            style="?android:attr/borderlessButtonStyle"/>

    </RelativeLayout>

</RelativeLayout>